Bug 1016200 - Single click stop working in web content, require double click. r=spohl