widget/cocoa/nsAppShell.mm
@@ -571,9 +571,10 @@ nsAppShell::ProcessNextNativeEvent(bool aMayWait)
       }
       EventAttributes attrs = GetEventAttributes(currentEvent);
       UInt32 eventKind = GetEventKind(currentEvent);
+      UInt32 eventClass = GetEventClass(currentEvent);
       bool osCocoaEvent =
-        ((GetEventClass(currentEvent) == 'cgs ') &&
-         ((eventKind == NSAppKitDefined) || (eventKind == NSSystemDefined)));
+        ((eventClass == 'appl') ||
+         ((eventClass == 'cgs ') && (eventKind != NSApplicationDefined)));
       // If attrs is kEventAttributeUserEvent or kEventAttributeMonitored
       // (i.e. a user input event), we shouldn't process it here while
       // aMayWait is false.  Likewise if currentEvent will eventually be
